--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,20 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="dark">
     <ion-title>
-      Ionic Blank
+      Llamadas
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let character of characters"
+    [navPush]="characterPage" [navParams]="{ 'character': character }">
+      <ion-avatar item-start>
+        <img [src]="character.img">
+      </ion-avatar>
+      <h2>{{ character.nombre }}</h2>
+      <p>{{ character.titulo }}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
